WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51833
Regression: WebKit no longer auto-scrolls with VoiceOver navigation
https://bugs.webkit.org/show_bug.cgi?id=51833
Summary
Regression: WebKit no longer auto-scrolls with VoiceOver navigation
chris fleizach
Reported
2011-01-03 10:42:56 PST
Regression: WebKit no longer auto-scrolls with VoiceOver navigation
Attachments
Patch
(5.14 KB, patch)
2011-01-03 11:14 PST
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-01-03 10:43:16 PST
Looks like it's because absoluteQuads for a RenderView no longer returns the contentsSize
chris fleizach
Comment 2
2011-01-03 11:14:28 PST
Created
attachment 77827
[details]
Patch
chris fleizach
Comment 3
2011-01-03 12:01:23 PST
http://trac.webkit.org/changeset/74920
WebKit Review Bot
Comment 4
2011-01-03 13:28:08 PST
http://trac.webkit.org/changeset/74920
might have broken Leopard Intel Debug (Tests)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug