AX: Regression: WebKit no longer auto-scrolls with VoiceOver navigation https://bugs.webkit.org/show_bug.cgi?id=51833

Reviewed by Darin Adler.

WebCore:

Make sure the web area returns the contentsSize, not the same size as what is displayed.

Test: platform/mac/accessibility/webarea-size-equals-content-size.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::boundingBoxRect):

LayoutTests:

* platform/mac/accessibility/webarea-size-equals-content-size-expected.txt: Added.
* platform/mac/accessibility/webarea-size-equals-content-size.html: Added.



Canonical link: https://commits.webkit.org/65259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74920 268f45cc-cd09-0410-ab3c-d52691b4dbfc